IGNITE-11946 Remove option "--add-modules=java.transaction" from Ignite launch scripts for Java 9 and 10 - Fixes #6650.
Signed-off-by: ipavlukhin <vololo100@gmail.com>
(cherry picked from commit f01a47adcadd5b1c56fa061cddea6040db9b4bbf)